# template-python-project

./: .pre-commit-config.yaml  Dockerfile  Github.md  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/workflows/: publish-docker-image.yml  publish-website-monitor-docker-image.yml  unit-tests.yml
app/: __main__.py  placeholder.py
tests/: placeholder_test.py
