[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "app"
version = "1.0.0"
description = ""
authors = ["ninja-asa"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
coverage = "^7.5.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/__init__.py",
    "*/__main__.py",
    "*/tests/*",
    "*/test_*",
    "*/setup.py",
    "*/conftest.py",
    "*/_version.py",
    "*main.py",
    "*config.py",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"
